# sunxi_fex.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml
.reuse/: dep5
samples/etalons/: test.cbor  test.dts  test.fex  test.json  test.msgpack  test.pon  test.ubj  test.yaml
sunxi_fex/: __init__.py  __main__.py
